deploy: a8f2c6d09d4d8b97bf1ca4597002814909c5da57

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Categories - hartje.io</title>
+<title>404 Page not found - hartje.io</title>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@900&family=IBM+Plex+Mono&family=Source+Sans+Pro&display=swap" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin=anonymous referrerpolicy=no-referrer>
@@ -28,8 +28,19 @@
 <hr>
 </header>
 <main>
-<ul>
-</ul>
+<main id=main>
+<div>
+<h1 id=title>
+<u><b>404</b></u> - Big oof
+</h1>
+<p>
+I don't know what that is, but here's a gif:
+</p>
+<img alt="working on content" src=/images/hotfire.gif>
+<br>
+<a href=/>Go Home</a>
+</div>
+</main>
 </main>
 <hr>
 <footer>
