--- a/about/index.html
+++ b/about/index.html
@@ -54,9 +54,15 @@
 <div class=next-and-prev>
 <a href=https://hartje.io/post/ class=next><svg width="18" height="10" xmlns="http://www.w3.org/2000/svg" class="icon icon-arrow-left"><path d="M4.078 5.636l4.867 3.819-.72.545C5.108 7.788 3.394 6.758.0 5l1.134-.585C3.823 3.007 5.504 1.952 8.226.0l.72.545-4.868 3.819H18v1.272H4.078z" fill-rule="nonzero"/></svg> Next Post</a>
 </div>
+<div id=disqus_thread></div>
+<script type=text/javascript>(function(){var a,b;if(window.location.hostname=="localhost")return;a=document.createElement('script'),a.type='text/javascript',a.async=!0,b='hartje-dot-io',a.src='//'+b+'.disqus.com/embed.js',(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(a)})()</script>
+<noscript>Please enable JavaScript to view the <a href=https://disqus.com/?ref_noscript>comments powered by Disqus.</a></noscript>
+<a href=https://disqus.com/ class=dsq-brlink>comments powered by <span class=logo-disqus>Disqus</span></a>
 </article>
 </main>
+<hr>
 <footer>
 </footer>
+<br>
 </body>
 </html>
