update theme for blog

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -2,12 +2,102 @@
 title: "hartje.io"
 linkTitle: "Hartje.io"
 ---
+<div class="col-xl-8">
+    <p class="terminal">
+        ryan@hartje.io:~# man Ryan\ Hartje<br />
+        RYANHARTJE(1)<br />
+    </p>
 
-{{< blocks/cover title="nerd stuff" image_anchor="top" height="auto" color="primary">}}
-<div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref " /blog">}}">
-       Check out my blog <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-    </a>
-    <p class="lead mt-5">software engineering, platform engineering, kubernetes, and more</p>
+    <p class="terminal">
+        <strong>SYNOPSIS</strong>
+    </p>
+
+    <span class="terminal ps-5 d-block">
+        <p class="terminal">
+        Ryan Hartje [--leadership] [--devops] [--architecture] [--ai] [--kubernetes] [--golang] [--python]
+        </p>
+    </span>
+
+    <p class="terminal">
+        <strong>LINKS</strong>
+    </p>
+
+    <span class="terminal ps-5 d-block">
+        <p class="terminal">
+        <a href="http://www.linkedin.com/pub/ryan-hartje/24/935/3" target="_new"><i class="fa fa-2x fa-brands fa-linkedin"></i></a> |
+        <a href="https://github.com/goshlanguage" target="_new"><i class="fa fa-2x fa-brands fa-github"></i></a> | 
+        <a href="https://hartje.io/blog/" target="_new">BLOG</a>
+        <br />
+        </p>
+    </span>
+
+    <p class="terminal">
+        <strong>DESCRIPTION</strong>
+    </p>
+
+    <span class="terminal ps-5 d-block">
+        Tenstorrent | Tesla | Equinix | Microsoft | WPEngine | BankRate | Hostgator <br />
+        <br />
+
+        Software Engineer with 15+ years of experience across AI, Datacenter automation, Cloud services, and Hosting. <br />
+        Ryan has led teams and projects, coaching and mentoring engineers to deliver reliable, scalable results. <br />
+        <br />
+
+        Experience includes building three clouds and ten years of Kubernetes in production. He focuses on resilient, <br />
+        observable, and maintainable microservice architectures. His work emphasizes network segmentation resilience <br />
+        and caching strategies including Redis, Docker pull-through caches, and artifact/package repositories. <br />
+        <br />
+
+        He has developed production-grade services in Go and Python, maintained front-end systems in TypeScript,<br />
+        and authored API middleware and gRPC services derived from OpenAPI specifications. Performance optimization <br />
+        and feedback loops were established using fio, k6, and continuous benchmarking. <br />
+        <br />
+
+        He has guided teams in establishing observability and telemetry standards using OpenTelemetry, Prometheus, and <br />
+        distributed tracing to provide deep visibility into system performance and reliability. <br />
+        <br />
+
+        Ryan advocates for engineering from first principles and believes strong test automation is key to <br />
+        safe, sustainable release velocity. <br />
+        <br />
+    </span>
+
+    <p class="terminal">
+        <strong>ACHIEVEMENTS</strong>
+    </p>
+
+    <span class="terminal ps-5 d-block">
+        <ul>
+        <li class="terminal">
+            Built the provisioning system that enabled the bring up of Tesla's Cortex AI Supercomputer at 1000+ servers an hour
+        </li>
+        <li class="terminal">
+            Developed and maintained automation that helped AKS scale past 1 million cores
+        </li>
+        <li class="terminal">
+            Designed, developed, and grew WPEngine's Enterprise offering from 0 past $1MM MRR
+        </li>
+        </ul>
+    </span>
+
+    <p class="terminal">
+        <strong>PROJECTS</strong>
+    </p>
+
+    <span class="terminal ps-5 d-block">
+        <p class="terminal">
+        <a href="https://cardsagainstkubernetes.com" target="_new">Cards Against Kubernetes</a> | A party game for kubernetes nerds
+        <br />
+
+        <a href="https://kubeclicker.com" target="_new">KubeClicker</a> | Idle game with Kubernetes themes
+        <br />
+        
+        <a href="https://github.com/goshlanguage/kpong" target="_new">KPong</a> | A chaos engineering twist on the classic Pong. Connect your kubernetes cluster. Lose your round, lose your pod
+        <br />
+
+        <a href="https://github.com/goshlanguage/cerulean" target="_new">Cerulean</a> | A mock Azure client for testing against the Azure API
+        <br />
+        </p>
+    </span>
 </div>
-{{< /blocks/cover>}}
+      
